--- a/V2rayU/Locales/zh-Hans.lproj/Localizable.strings
+++ b/V2rayU/Locales/zh-Hans.lproj/Localizable.strings
@@ -162,3 +162,27 @@
 "TransportSettings" = "传输设置";
 "ServerSettings" = "服务器设置";
 "StreamSettings" = "流设置";
+
+// app menu
+"TurnCoreOn" = "启动核心";
+"TurnCoreOff" = "关闭核心";
+"ViewLog" = "查看日志";
+"ViewConfigJson" = "查看配置 JSON";
+"ViewPacFile" = "查看 PAC 文件";
+"PacMode" = "PAC 模式";
+"GlobalMode" = "全局模式";
+"ManualMode" = "手动模式";
+"RoutingList" = "路由 ...";
+"ServerList" = "服务器 ...";
+"goServerSettings" = "服务器配置 ...";
+"goRoutingSettings" = "路由设置 ...";
+"Ping" = "Ping 测试";
+"ImportServersFromClipboard" = "从剪贴板导入服务器";
+"ScanQRCodeFromScreen" = "扫描屏幕上的二维码";
+"ShareQrCode" = "分享二维码";
+"CopyHttpProxyShellExportLine" = "复制 HTTP 代理 Shell 导出命令";
+"Preferences" = "偏好设置";
+"CheckForUpdates" = "检查更新";
+"Quit" = "退出";
+"On" = "开启";
+"Off" = "关闭";
