--- a/V2rayU/Locales/zh-HK.lproj/Localizable.strings
+++ b/V2rayU/Locales/zh-HK.lproj/Localizable.strings
@@ -186,3 +186,31 @@
 "Quit" = "退出";
 "On" = "開啟";
 "Off" = "關閉";
+
+// HelpView
+"HelpDiagnosticsTitle" = "系統診斷";
+"HelpDiagnosticsSubHead" = "檢測關鍵組件狀態並提供常見問題修復操作";
+"Refresh" = "刷新";
+"V2rayCoreSwitchStatus" = "v2ray-core 開關狀態";
+"V2rayCoreRunningStatus" = "v2ray-core 運行狀態 (launchd)";
+"BackgroundActivity" = "背景活動 (App Background Activity)";
+"BackgroundActivitySubtitleRunning" = "核心進程在運行";
+"BackgroundActivitySubtitleNotRunning" = "核心進程未運行";
+"OpenSettings" = "打開設定";
+"Restart" = "重啟";
+"RunPingNow" = "立即檢測";
+"V2rayCoreInstallAndVersion" = "v2ray-core 安裝與版本";
+"V2rayUToolPermission" = "V2rayUTool 權限";
+"GeoipFile" = "geoip.dat 檔案";
+"Installed" = "已安裝";
+"Missing" = "缺失";
+"PermissionException" = "root:admin";
+"V2rayCoreNotInstalled" = "v2ray-core 未安裝或不可執行。";
+"UnableToOpenSystemSettings" = "無法打開系統設定";
+"PleaseManuallyOpenBackgroundActivity" = "請手動前往 系統設定 → 通用 → 背景活動，允許 V2rayU 在背景執行。";
+"Fix" = "修復";
+"PingProblem" = "當前節點不可用或網路異常。";
+"V2rayUToolProblem" = "V2rayUTool 權限異常，可能無法正常啟動核心。";
+"BackgroundProblem" = "應用未在背景運行；可能被系統限制或核心進程已停止。";
+"GeoipProblem" = "geoip.dat 檔案缺失，可能導致部分功能異常。";
+"V2rayCoreProblem" = "v2ray-core 未安裝或不可執行。";
