--- a/V2rayU/Locales/en.lproj/Localizable.strings
+++ b/V2rayU/Locales/en.lproj/Localizable.strings
@@ -173,16 +173,20 @@
 "PacMode" = "PAC Mode";
 "GlobalMode" = "Global Mode";
 "ManualMode" = "Manual Mode";
-"RoutingList" = "Routing ...";
-"ServerList" = "Server ...";
-"goServerSettings" = "Server Settings...";
-"goRoutingSettings" = "Routing Settings...";
+"Global.tip" = "system proxies (settings->Network->WIFI->Detail->Proxies->HTTP,HTTPS,SOCKS Proxy)";
+"Pac.tip" = "auto proxy config (settings->Network->WIFI->Detail->Proxies->Automatic Proxy Configuration)";
+"Manual.tip" = "do not set system proxy, you need to set proxy manually in application";
+"RoutingList" = "choose routing";
+"ServerList" = "choose server";
+"goServerSettings" = "Server Settings ...";
+"goSubscriptionSettings" = "Subscription Settings ...";
+"goRoutingSettings" = "Routing Settings ...";
 "Ping" = "Ping";
 "ImportServersFromClipboard" = "Import Servers from Clipboard";
 "ScanQRCodeFromScreen" = "Scan QR Code from Screen";
 "ShareQrCode" = "Share QR Code";
 "CopyHttpProxyShellExportLine" = "Copy HTTP Proxy Shell Export Line";
-"Preferences" = "Preferences";
+"goPreferences" = "Preferences ...";
 "CheckForUpdates" = "Check for Updates";
 "Quit" = "Quit";
 "On" = "On";
