修复切换模式及开关core状态

--- a/V2rayU/Locales/en.lproj/Localizable.strings
+++ b/V2rayU/Locales/en.lproj/Localizable.strings
@@ -165,6 +165,8 @@
 "StreamSettings" = "Stream settings";
 
 // app menu
+"CoreOn" = "Core is On";
+"CoreOff" = "Core is off";
 "TurnCoreOn" = "Turn Core On";
 "TurnCoreOff" = "Turn Core Off";
 "ViewLog" = "View Log";
