--- a/V2rayU/Locales/en.lproj/Localizable.strings
+++ b/V2rayU/Locales/en.lproj/Localizable.strings
@@ -16,6 +16,12 @@
 "Remark" = "Remark";
 "Edit" = "Edit";
 "Preview" = "Preview";
+"Copy" = "Copy";
+"Copied" = "Copied";
+"Regenerated" = "Regenerated";
+"Regenerate" = "Regenerated";
+"Generate" = "Generate";
+"Generated" = "Generated";
 
 // app content
 "Activity" = "Activity";
