--- a/V2rayU/Locales/zh-HK.lproj/Localizable.strings
+++ b/V2rayU/Locales/zh-HK.lproj/Localizable.strings
@@ -170,11 +170,11 @@
 "StreamSettings" = "串流設定";
 
 // app menu
-"CoreOn" = "core 已啟動";
-"CoreOff" = "core 已關閉";
-"TurnCoreOn" = "啟動核心";
-"TurnCoreOff" = "關閉核心";
-"ViewLog" = "檢視 core 日誌";
+"CoreOn" = "xray-core 已啟動";
+"CoreOff" = "xray-core 已關閉";
+"TurnCoreOn" = "啟動 xray-core";
+"TurnCoreOff" = "關閉 xray-core";
+"ViewLog" = "檢視 xray-core 日誌";
 "ViewConfigJson" = "檢視 config.json ";
 "ViewPacFile" = "檢視 pac 檔案";
 "PacMode" = "PAC 模式";
